--- a/demo.html
+++ b/demo.html
@@ -43,7 +43,7 @@
     <script language="javascript" src="jquery.canvasAreaDraw.js"></script>
     <script>
     $(document).ready(function(){
-      var $test = $('textarea#example').canvasAreaDraw({
+      $('textarea#example').canvasAreaDraw({
         imageUrl: "assets/6956772778_2fa755a228.jpg",
         sensitivity: 24,
         rectWidth: 4,
@@ -57,7 +57,7 @@
           return '<a href="#">Region #1.' + region_id + '</a>';
         }
       });
-      $test.test();
+      $('textarea#example').canvasAreaDraw('addRegion');
     });
     </script>
   </body>
